<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/fragment_backgroud">
    <RelativeLayout
        android:id="@+id/myTitle"
        style="@style/NavLayout"
        android:gravity="center_vertical">
        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:textColor="@color/text_checked"
            android:textSize="20sp"
            android:text="@string/tab_app_name"/>
        <ImageView
            android:id="@+id/imgView_search"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_serch"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_line"
        android:layout_above="@+id/navigation"/>

    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_below="@id/myTitle"
        android:layout_height="32dp"
        android:background="@color/tab_background"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/text_nav1"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/NavTextView"
            android:text="@string/text_view_recommend"/>
        <TextView
            android:id="@+id/text_nav2"
            style="@style/NavTextView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/text_view_classify"/>
        <TextView
            android:id="@+id/text_nav3"
            style="@style/NavTextView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/text_view_broad"/>
        <TextView
            android:id="@+id/text_nav4"
            style="@style/NavTextView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/text_view_ranking_list"/>
        <TextView
            android:id="@+id/text_nav5"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/NavTextView"
            android:text="@string/text_view_host"/>
    </LinearLayout>

    <ImageView
        android:layout_below="@id/navigation"
        android:layout_height="5dp"
        android:id="@+id/cursor"
       style="@style/cursorImageView"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_below="@id/cursor"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>

</RelativeLayout>
