<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.my.cyanstone.himalayan.MainActivity">
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_line"
        android:layout_above="@+id/tab_radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </View>
    <RadioGroup
        android:id="@+id/tab_radioGroup"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:background="@color/tab_background">
        <RadioButton
            android:id="@+id/tab_find"
            style="@style/tab_radio_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tab_text_find"
            android:drawableTop="@drawable/tab_find_pic"/>
        <RadioButton
            android:id="@+id/tab_customization"
            style="@style/tab_radio_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tab_customization_text"
            android:drawableTop="@drawable/tab_customization_pic"/>
        <RadioButton
            android:id="@+id/tab_download"
            style="@style/tab_radio_button"
            android:layout_marginLeft="60dp"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/tab_download_text"
            android:drawableTop="@drawable/tab_download_pic"/>
        <RadioButton
            android:id="@+id/tab_me"
            style="@style/tab_radio_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tab_me_text"
            android:drawableTop="@drawable/tab_me_pic"/>
    </RadioGroup>
        <ImageView
            android:id="@+id/tab_play_imgBnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tab_playing_pic"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>
